fixed shadow color in dark mode

--- a/src/Components/NavigationRail.css
+++ b/src/Components/NavigationRail.css
@@ -10,7 +10,7 @@
   justify-content: space-evenly;
   align-items: center;
   color: var(--md-sys-color-on-surface);
-  box-shadow: 0px -1px 8px gray;
+  box-shadow: 0px -0px 8px var(--md-sys-color-shadow);
   transition: 0.2s;
 
 }
